report: into - background

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -97,3 +97,24 @@ ATmega328P},
   howpublished = {\url{http://www.mikrocontroller.net/articles/AVR_In_System_Programmer}},
   note = {Accessed: 2014-09-08}
 }
+@article{ramsey,
+  title = {A Molecular Beam Resonance Method with Separated Oscillating Fields},
+  author = {Ramsey, Norman F.},
+  journal = {Phys. Rev.},
+  volume = {78},
+  issue = {6},
+  pages = {695--699},
+  numpages = {0},
+  year = {1950},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.78.695},
+  url = {http://link.aps.org/doi/10.1103/PhysRev.78.695}
+}
+@article{frmexp,
+  title = {A next generation measurement of the electric dipole moment of the neutron at the FRM II},
+  author = {I. Altarev; D.H. Beck; S. Chesnevskaya; T. Chupp; W. Feldmeier; P. Fierlinger; A. Frei; E. Gutsmiedl; F. Kuchler; P. Link; et al.},
+  journal = {IL NUOVO CIMENTO},
+  year = {2012},
+  url = {http://www.universe-cluster.de/fierlinger/}
+}
