--- a/report/main.tex
+++ b/report/main.tex
@@ -34,6 +34,32 @@ experiment setup}
 \chapter{Introduction}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background}
+\subsection{The neutron electric dipole measurement}
+According to the standard model, it is assumed, that neutrons posess a electric dipole moment (EDM)
+in the order of $10^{-32}e\cdot cm$. However an extenstion of the standard model already predicts
+a dipolemoment in the order between $10^{-26}e\cdot cm$ and $10^{-28}e\cdot cm$. Until now, no
+experiment was able to do measurement more precise than $10^{-26}e\cdot cm$\cite{frmexp}.\\
+The Neutron EDM (nEDM) experiment at Technische Universitat München is trying to increase the precision
+of such a dipolemoment measurement\cite{frmexp}.\\
+The experiment uses spin polarized ultracold neutrons, which are guided into two chambers inside a
+highly controlled and magnetically shielded environment (see figure \ref{fig:exp}). There, a Spin precession measurement according
+to Ramsey \cite{ramsey} is performed, which allows it to get information about the dipole moment of the neutons.
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.87\linewidth]{img/frm3d.jpg}
+\caption{Experiment environment. 1: Field cage for magnetic field compensation, 2: Outer magnetic shield, 3: Inner magnetic shield, 4: Air conditioning system}
+\label{fig:exp}
+\end{figure}
+\subsection{Temperature measurement}
+Besides an exact defined magnetic environment inside the experiment setup, a well defined
+environment temperature and humidity is also important for the experiment. Therefore a
+air conditioning system is installed to regulate the temperature inside the field cage.
+Our temperature sensor network will provide data for the air conditioning system.\\
+As a precise homogenous temperature distribution inside the whole field cage however is
+almost impossible to achieve. Therefore our sensor network will provide useful data
+with sufficient precision to analyze, if specific physical observations are dependant
+on temperature changes in the environment. Also a temperature compensation of measurements
+based on environment temperature is possible.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Features}
 %###############################################################
